--- a/41/Unknow.json
+++ b/41/Unknow.json
@@ -9,7 +9,7 @@
   "Id": 2,  
   "Title": "Está se sentindo mal?",
   "Content": "Está com sintomas compatíveis com o COVID-19? Clique aqui e entre em contato com o Alô Saúde.",
-  "Uri": "0800 333 3233",
+  "Uri": "",
   "PhoneNumber": "0800 333 3233"
 },
  {
