--- a/00/Unknow.json
+++ b/00/Unknow.json
@@ -1,6 +1,6 @@
 {
-   "header-title":"Fique tranquilo, estamos te acompanhando",
-   "header-body":"Não identificamos nenhum risco de contaminação. Fique de olho nas nossas recomendações e mantenha-se seguro.",
+   "header_title":"Fique tranquilo, estamos te acompanhando",
+   "header_body":"Não identificamos nenhum risco de contaminação. Fique de olho nas nossas recomendações e mantenha-se seguro.",
    "news":[
       {
          "Id":1,
