--- a/00/Unknow.json
+++ b/00/Unknow.json
@@ -6,7 +6,7 @@
          "Id":1,
          "Title":"Mantenha-se seguro!",
          "Content":"Ao sair de casa, lembre-se de manter a máscara cobrindo o nariz e a boca. Ao chegar, lave bem as mãos com água e sabão...",
-         "Uri":"https://www.alosaudefloripa.com.br/",
+         "Uri":"https://coronavirus.saude.gov.br/",
          "PhoneNumber":""
       },
       {
